--- a/CarRental/Areas/Admin/Views/Product/Edit.cshtml
+++ b/CarRental/Areas/Admin/Views/Product/Edit.cshtml
@@ -134,9 +134,7 @@
 
                                 </div>
                                 <div class="form-group">
-                                    @* <label asp-for="Details">Chi tiết</label> *@
-                                    @* <input asp-for="CarBrand" type="text" class="form-control" id="basicInput"
-                                           placeholder="Nhập tên hãng xe"> *@
+                                    
                                     <label asp-for="Details" for="exampleFormControlTextarea1" class="form-label">
                                         Chi tiết
                                     </label>
@@ -144,15 +142,18 @@
 
                                     <span asp-validation-for="Details" class="text-danger"></span>
                                 </div>
-                                <div class="form-group">
-                                    <label asp-for="IsActive" class="control-label">
-                                        @Html.CheckBox("IsActive")
-                                        Hiển thị
+                             
+                              
+                                <div class="form-group" clas="form-check">
+                                    <label class="form-check-label">
+                                        <input asp-for="IsActive" class="form-check-input" type="checkbox" /> Hiển thị
                                     </label>
-
-                                    <span asp-validation-for="IsActive" class="text-danger"></span>
                                 </div>
-                               
+                                <div class="form-group" clas="form-check">
+                                    <label class="form-check-label">
+                                        <input asp-for="IsSale" class="form-check-input" type="checkbox" /> sản phẩm sale
+                                    </label>
+                                </div>
                                 <div class="btn-group mb-3">
                                     <div class="form-group">
                                         <input type="submit" value="Lưu" class="btn btn-primary" />
