--- a/CarRental/Areas/Admin/Views/Product/Index.cshtml
+++ b/CarRental/Areas/Admin/Views/Product/Index.cshtml
@@ -62,6 +62,7 @@
                                             <th>Giá giảm</th>
                                             <th>Ảnh</th>
                                             <th>Hiện</th>
+                                            <th>Sale</th>
                                             <th>Chức năng</th>
                                         </tr>
                                     </thead>
@@ -83,10 +84,13 @@
                                                 <td>  <img src="@Html.DisplayFor(modeitem => item.Image)" alt="Alternate Text" width="50" height="50" /></td>
                                                 @* <td>@Html.DisplayFor(modeitem => item.IsActive)</td> *@
                                                 <td>
-                                                    <input type="checkbox" disabled="disabled" @(item.IsActive.HasValue && item.IsActive.Value ? "checked" : "") />
+                                                    <input asp-for="@item.IsActive" type="checkbox" disabled="disabled"  />
 
                                                 </td>
+                                                <td>
+                                                    <input asp-for="@item.IsSale" type="checkbox" disabled="disabled"  />
 
+                                                </td>
                                                 <td>
                                                     <a asp-action="Edit" asp-route-id="@item.CarId" class="btn btn-success">Sửa</a>
                                                     <a asp-action="Delete" asp-route-id="@item.CarId" class="btn btn-danger">Xoá</a>
