--- a/CarRental/Areas/Admin/Views/Orders/OrderDetails.cshtml
+++ b/CarRental/Areas/Admin/Views/Orders/OrderDetails.cshtml
@@ -1,11 +1,8 @@
-﻿@model IEnumerable<CarRental.Models.CarRentalOrder>
+﻿@model IEnumerable<CarRental.ViewModels.OrderDetailVM>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "OrderDetails";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-
-
-
 <div id="main">
     <header class="mb-3">
         <a href="#" class="burger-btn d-block d-xl-none">
@@ -38,7 +35,7 @@
                     <div class="card">
                         <div class="card-header">
                             @* <h4 class="card-title">Hoverable rows</h4> *@
-                            <a asp-action="Create" class="btn btn-info">Thêm mới</a>
+                            <a asp-controller="Orders" asp-action="Index" class="btn btn-info"><i class="bi bi-arrow-return-left"></i>Quay lại</a>
                         </div>
                         <div class="card-content">
                             <div class="card-body">
@@ -56,11 +53,12 @@
                                     <thead>
                                         <tr>
                                             <th>#</th>
-                                            <th>Mã đơn</th>
-                                            <th>Ngày đặt</th>
+                                            <th>Hình ảnh</th>
+                                            <th>Tên xe</th>
+                                            <th>Số lượng</th>
+                                            <th>Ngày nhận xe</th>
+                                            <th>Ngày trả xe</th>
                                             
-                                            <th>Trạng thái</th>
-                                            <th>Người đặt</th>
                                             <th>Chức năng</th>
                                         </tr>
                                     </thead>
@@ -72,17 +70,19 @@
                                         {
 
                                             <tr>
-                                                <td class="text-bold-500">@(i++)</td>
-                                                <td>@Html.DisplayFor(modeitem => item.OrderId)</td>
-                                                <td class="text-bold-500">@Html.DisplayFor(modeitem => item.OrderDate)</td>
-                                                @* <td>@Html.DisplayFor(modeitem => item.ReturnDate)</td> *@
-                                                <td>@Html.DisplayFor(modeitem => item.Status.StatusDescription)</td>
-                                                <td>@Html.DisplayFor(modeitem => item.Customer.FullName)</td>
 
+                                                <td class="text-bold-500">@(i++)</td>
+                                                <td>  <img src="@Html.DisplayFor(modeitem => item.Image)" alt="Alternate Text" width="50" height="50" /></td>
+                                                <td>@Html.DisplayFor(modeitem => item.CarName)</td>
+                                                <td>@Html.DisplayFor(modeitem => item.Quantity)</td>
+                                                <td class="text-bold-500">@item.pickupDate.ToString("dd-MM-yyyy")</td>
+                                                <td>@item.returnDate.ToString("dd-MM-yyyy")</td>
+                    
+
+                                                
                                                 <td>
-                                                    <a asp-controller="Orders" asp-action="Edit" asp-route-id="@item.OrderId" class="btn btn-success">Sửa</a>
-                                                    <a asp-controller="Orders" asp-action="OrderDetails" asp-route-id="@item.OrderId" class="btn btn-info">Chi tiết</a>
-                                                    <a asp-action="Delete" asp-route-id="@item.OrderId" class="btn btn-danger">Xoá</a>
+                                                    <a asp-action="Edit" asp-route-id="@item.OrderDetailID" class="btn btn-success">Sửa</a>
+                                                    <a asp-action="Delete" asp-route-id="@item.OrderDetailID" class="btn btn-danger">Xoá</a>
                                                 </td>
                                             </tr>
                                         }
@@ -114,3 +114,4 @@
         </div>
     </footer>
 </div>
+
