thuy moi sua tiêp

--- a/CarRental/Areas/Admin/Views/News/Index.cshtml
+++ b/CarRental/Areas/Admin/Views/News/Index.cshtml
@@ -56,9 +56,9 @@
                                             <th>#</th>
                                             <th>Tiêu đề</th>
                                             <th>Hình ảnh</th>
-                                            <th>Mổ tả</th>
+                                            <th>Mô tả</th>
                                             @* <th>Chitiết</th> *@
-                                            <th>Hiên</th>
+                                            <th>Hiện</th>
 
                                         </tr>
                                     </thead>
