--- a/CarRental/Views/News/Details.cshtml
+++ b/CarRental/Views/News/Details.cshtml
@@ -63,7 +63,7 @@
                                         <div class="single-comment-wrap mb-4 d-flex">
                                             <figure class="author-thumb">
                                                 <a href="#">
-                                                    <img src="assets/images/review/1.jpg" alt="Author">
+                                                    <img src="~/assets/images/review/1.jpg" alt="Author">
                                                 </a>
                                             </figure>
                                             <div class="comments-info">
