--- a/CarRental/Areas/Admin/Views/News/Delete.cshtml
+++ b/CarRental/Areas/Admin/Views/News/Delete.cshtml
@@ -35,7 +35,7 @@
         <section class="section">
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title">Xoá News</h4>
+                    <h4 class="card-title">Xoá xe</h4>
                 </div>
 
                 <div class="card-body">
@@ -89,7 +89,7 @@
 
                             </div>
 
-                            <form asp-action="Xóa">
+                            <form asp-action="Delete">
                                 <input type="hidden" asp-for="NewsId" />
                                 <div class="btn-group mb-3">
                                     <div class="form-group">
