--- a/CarRental/Views/Product/Details.cshtml
+++ b/CarRental/Views/Product/Details.cshtml
@@ -255,7 +255,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 @{
-                                    var buttonClass = Model.IsActive
+                                    var buttonClass = (bool)Model.IsActive
                                     ? "ajax-add-to-cart btn product-cart button-icon flosun-button dark-btn w-100"
                                     : "ajax-add-to-cart btn product-cart button-icon flosun-button dark-btn w-100 disabled";
                                 }
