--- a/CarRental/Views/Cart/Index.cshtml
+++ b/CarRental/Views/Cart/Index.cshtml
@@ -1,42 +1,43 @@
-﻿@model IEnumerable<CarRental.ViewModels.CartItemsVM> 
+﻿@model IEnumerable<CarRental.ViewModels.CartItemsVM>
 <!-- Breadcrumb Area Start Here -->
-    <div class="breadcrumbs-area position-relative">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <div class="breadcrumb-content position-relative section-content">
-                        <h3 class="title-3">Shopping Cart</h3>
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li>Shopping Cart</li>
-                        </ul>
-                    </div>
+<div class="breadcrumbs-area position-relative">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <div class="breadcrumb-content position-relative section-content">
+                    <h3 class="title-3">Shopping Cart</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li>Shopping Cart</li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Breadcrumb Area End Here -->
-    <!-- cart main wrapper start -->
-    <div class="cart-main-wrapper mt-no-text">
-        <div class="container custom-area">
-            <div class="row">
-                <div class="col-lg-12 col-custom">
-                    <!-- Cart Table Area -->
-                    <div class="cart-table table-responsive">
-                        <table class="table table-bordered">
-                            <thead>
-                                <tr>
-                                    <th class="pro-thumbnail">Hình ảnh</th>
-                                    <th class="pro-title">Tên xe</th>
-                                    <th class="pro-price">Ngày nhận</th>
-                                    <th class="pro-price">Ngày trả</th>
-                                    <th class="pro-quantity">Quantity</th>
-                                    <th class="pro-subtotal">Total</th>
-                                    <th class="pro-remove">Remove</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var item in Model) {
+</div>
+<!-- Breadcrumb Area End Here -->
+<!-- cart main wrapper start -->
+<div class="cart-main-wrapper mt-no-text">
+    <div class="container custom-area">
+        <div class="row">
+            <div class="col-lg-12 col-custom">
+                <!-- Cart Table Area -->
+                <div class="cart-table table-responsive">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th class="pro-thumbnail">Hình ảnh</th>
+                                <th class="pro-title">Tên xe</th>
+                                <th class="pro-price">Ngày nhận</th>
+                                <th class="pro-price">Ngày trả</th>
+                                <th class="pro-quantity">Quantity</th>
+                                <th class="pro-subtotal">Total</th>
+                                <th class="pro-remove">Remove</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
                                 <tr>
                                     <td class="pro-thumbnail"><a href="#"><img class="img-fluid" src="@item.Image" alt="Product" /></a></td>
                                     <td class="pro-title"><a href="#">@item.CarName </a></td>
@@ -53,59 +54,59 @@
                                             </div>
                                         </div>
                                     </td>
-                                    <td class="pro-subtotal"><span>$@item.PriceTotal</span></td>
+                                    <td class="pro-subtotal"><span>@item.PriceTotal đ</span></td>
                                     <td class="pro-remove"><a asp-controller="Cart" asp-action="removeCart" asp-route-id="@item.CartId"><i class="lnr lnr-trash"></i></a></td>
                                 </tr>
 
-                                }
-                               
-                            </tbody>
-                        </table>
-                    </div>
-                    <!-- Cart Update Option -->
-                    <div class="cart-update-option d-block d-md-flex justify-content-between">
-                        <div class="apply-coupon-wrapper">
-                            <form action="#" method="post" class=" d-block d-md-flex">
-                                <input type="text" placeholder="Enter Your Coupon Code" required />
-                                <button class="btn flosun-button primary-btn rounded-0 black-btn">Apply Coupon</button>
-                            </form>
-                        </div>
-                        <div class="cart-update mt-sm-16">
-                        <button id="update-cart-btn" class="btn flosun-button primary-btn rounded-0 black-btn">Update Cart</button>
-                        </div>
-                    </div>
+                            }
+
+                        </tbody>
+                    </table>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-5 ml-auto col-custom">
-                    <!-- Cart Calculation Area -->
-                    <div class="cart-calculator-wrapper">
-                        <div class="cart-calculate-items">
-                            <h3>Cart Totals</h3>
-                            <div class="table-responsive">  
-                                <table class="table">
-                                    <tr>
-                                        <td>Sub Total</td>
-                                        <td>$@Model.Sum(p=>p.PriceTotal)</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Shipping</td>
-                                        <td>$70</td>
-                                    </tr>
-                                    <tr class="total">
-                                        <td>Total</td>
-                                        <td class="total-amount">$@Model.Sum(p=>p.PriceTotal)</td>
-                                    </tr>
-                                </table>
-                            </div>
-                        </div>
-                        <a asp-controller="Cart" asp-action="Checkout" class="btn flosun-button primary-btn rounded-0 black-btn w-100">Chuyển đến trang thanh toán</a>
+                <!-- Cart Update Option -->
+                <div class="cart-update-option d-block d-md-flex justify-content-between">
+                    <div class="apply-coupon-wrapper">
+                        <form action="#" method="post" class=" d-block d-md-flex">
+                            <input type="text" placeholder="Enter Your Coupon Code" required />
+                            <button class="btn flosun-button primary-btn rounded-0 black-btn">Apply Coupon</button>
+                        </form>
+                    </div>
+                    <div class="cart-update mt-sm-16">
+                        <button id="update-cart-btn" class="btn flosun-button primary-btn rounded-0 black-btn">Update Cart</button>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-5 ml-auto col-custom">
+                <!-- Cart Calculation Area -->
+                <div class="cart-calculator-wrapper">
+                    <div class="cart-calculate-items">
+                        <h3>Cart Totals</h3>
+                        <div class="table-responsive">
+                            <table class="table">
+                                <tr>
+                                    <td>Sub Total</td>
+                                    <td>@Model.Sum(p => p.PriceTotal) đ</td>
+                                </tr>
+                                <tr>
+                                    <td>Shipping</td>
+                                    <td>$70</td>
+                                </tr>
+                                <tr class="total">
+                                    <td>Total</td>
+                                    <td class="total-amount">@Model.Sum(p => p.PriceTotal) đ</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    <a asp-controller="Cart" asp-action="Checkout" class="btn flosun-button primary-btn rounded-0 black-btn w-100">Chuyển đến trang thanh toán</a>
+                </div>
+            </div>
+        </div>
     </div>
-    <!-- cart main wrapper end -->
+</div>
+<!-- cart main wrapper end -->
 @section scripts {
     <script>
                 $(document).ready(function() {
