--- a/CarRental/Views/Product/Index.cshtml
+++ b/CarRental/Views/Product/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿<!-- Breadcrumb Area Start Here -->
-<div class="breadcrumbs-area position-relative" >
+<div class="breadcrumbs-area position-relative">
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
                 <div class="breadcrumb-content position-relative section-content">
-                    <h3 class="title-3">Shop Sidebar</h3>
+                    <h3 class="title-3">Shop</h3>
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li>Shop</li>
@@ -71,10 +71,10 @@
                 <aside class="sidebar_widget widget-mt">
                     <div class="widget_inner">
                         <div class="widget-list widget-mb-1">
-                            <h3 class="widget-title">Search</h3>
+                            <h3 class="widget-title">Tìm kiếm</h3>
                             <div class="search-box">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Search Our Store" aria-label="Search Our Store">
+                                    <input type="text" class="form-control" placeholder="Tìm kiếm từ cửa hàng" aria-label="Tìm kiếm từ cửa hàng">
                                     <div class="input-group-append">
                                         <button class="btn btn-outline-secondary" type="button">
                                             <i class="fa fa-search"></i>
@@ -83,7 +83,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="widget-list widget-mb-1">
+                        <@* div class="widget-list widget-mb-1">
                             <h3 class="widget-title">Menu Categories</h3>
                             <!-- Widget Menu Start -->
                             <nav>
@@ -125,7 +125,7 @@
                                 </ul>
                             </nav>
                             <!-- Widget Menu End -->
-                        </div>
+                        </div> *@
                         <div class="widget-list widget-mb-1">
                             <h3 class="widget-title">Price Filter</h3>
                             <!-- Widget Menu Start -->
@@ -137,17 +137,17 @@
                             <!-- Widget Menu End -->
                         </div>
                         <div class="widget-list widget-mb-1">
-                            <h3 class="widget-title">Categories</h3>
+                            <h3 class="widget-title">Phân loại</h3>
                             <div class="sidebar-body">
                                 <ul class="sidebar-list">
-                                    <li><a href="#">All Product</a></li>
-                                    <li><a href="#">Best Seller (5)</a></li>
-                                    <li><a href="#">Featured (4)</a></li>
-                                    <li><a href="#">New Products (6)</a></li>
+                                    <li><a href="product">Tất cả</a></li>
+                                    <li><a href="">Sale</a></li>
+                                    @* <li><a href="#">Featured (4)</a></li>
+                                    <li><a href="#">New Products (6)</a></li> *@
                                 </ul>
                             </div>
                         </div>
-                        <div class="widget-list widget-mb-2">
+                        @* <div class="widget-list widget-mb-2">
                             <h3 class="widget-title">Color</h3>
                             <div class="sidebar-body">
                                 <ul class="checkbox-container categories-list">
@@ -183,8 +183,8 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
-                        <div class="widget-list widget-mb-3">
+                        </div> *@
+                        @* <div class="widget-list widget-mb-3">
                             <h3 class="widget-title">Tags</h3>
                             <div class="sidebar-body">
                                 <ul class="tags">
@@ -197,9 +197,9 @@
                                     <li><a href="#">Gift</a></li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> *@
                         <div class="widget-list mb-0">
-                            <h3 class="widget-title">Recent Products</h3>
+                            @* <h3 class="widget-title">Recent Products</h3> *@
                             <div class="sidebar-body">
                                 @await Component.InvokeAsync("RecentProducts")
                             </div>
